--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%=title%></title>
-</head>
-<body>
-    <a href='/new'>New Message</a>
-    <h1><%=title%></h1>
-        <ul>
-            <% messages.forEach(function(message) { %>
-                <li><%=message.user %> <%=message.text%></li>
+<html lang="en" data-bs-theme="dark">
+  <head>
+    <%- include('./partials/header'); -%>
+    <title><%= title %></title>
+  </head>
+  <body>
+    <%- include('./partials/navbar'); -%>
+    <div class="container min-vh-100">
+      <div class="p-5 bg-primary text-white text-left rounded">
+        <h1><%=title%></h1>
+      </div>
+      <br />
+      <a href="<%= basePath %>/new" class="btn btn-primary">New Message</a>
+
+      <div class="table-responsive">
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">User</th>
+              <th scope="col">Text</th>
+              <!-- <th scope="col">added</th>
+              <th scope="col">messageId</th> -->
+            </tr>
+          </thead>
+          <tbody>
+            <% userPost.forEach((element) => { %>
+            <tr>
+              <td>
+                <div class="h4"><%= element.user %></div>
+              </td>
+              <td>
+                <div class="col">
+                  <div class="row h5"><%= element.text %></div>
+                  <div class="row">
+                    <small
+                      >Date: <br />
+                      <%= element.added %></small
+                    >
+                  </div>
+                  <div class="row">
+                    <small>MessageID: <br /><%= element.messageId %></small>
+                  </div>
+                </div>
+              </td>
+
+              <td>
+                <div class="d-flex flex-column">
+                  <div class="mb-2">
+                    <a
+                      href="<%= basePath %>/edit/<%= element.messageId %>"
+                      class="btn btn-warning"
+                      >&nbsp;&nbsp;Edit&nbsp;&nbsp;
+                    </a>
+                  </div>
+                  <div class="">
+                    <form method="POST" action="<%= basePath %>/delete">
+                      <input
+                        type="hidden"
+                        name="user"
+                        value="<%= element.user %>"
+                      />
+                      <input
+                        type="hidden"
+                        name="text"
+                        value="<%= element.text %>"
+                      />
+                      <input
+                        type="hidden"
+                        name="added"
+                        value="<%= element.added %>"
+                      />
+                      <input
+                        type="hidden"
+                        name="messageId"
+                        value="<%= element.messageId %>"
+                      />
+                      <button class="btn btn-danger" type="submit">
+                        Delete
+                      </button>
+                    </form>
+                  </div>
+                </div>
+              </td>
+            </tr>
             <% }); %>
-        </ul>
-</body>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <%- include('./partials/footer'); -%>
+  </body>
 </html>
