--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,1 +1,32 @@
-
+<!-- nav -->
+<div class="container">
+  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <div class="container-fluid">
+      <ul class="navbar-nav">
+        <div class="row">
+          <div class="col">
+            <li class="nav-item">
+              <a class="navbar-brand" href="<%= basePath %>/">📮</a>
+            </li>
+          </div>
+          <div class="col">
+            <li class="nav-item">
+              <a class="nav-link active" href="<%= basePath %>/">Home</a>
+            </li>
+          </div>
+          <div class="col">
+            <li class="nav-item">
+              <a class="nav-link active" href="<%= basePath %>/new">New</a>
+            </li>
+          </div>
+          <div class="col">
+            <li class="nav-item">
+              <a class="nav-link active" href="<%= basePath %>/about">About</a>
+            </li>
+          </div>
+        </div>
+      </ul>
+    </div>
+  </nav>
+</div>
+<!-- end nav -->
