--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,7 @@
             <tr>
               <th scope="col">User</th>
               <th scope="col">Text</th>
+              <th scope="col"></th>
               <!-- <th scope="col">added</th>
               <th scope="col">messageId</th> -->
             </tr>
