--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,9 +17,9 @@
         <table class="table">
           <thead>
             <tr>
-              <th scope="col">User</th>
-              <th scope="col">Text</th>
-              <th scope="col"></th>
+              <th scope="">User</th>
+              <th scope="">Text</th>
+              <th scope=""></th>
               <!-- <th scope="col">added</th>
               <th scope="col">messageId</th> -->
             </tr>
@@ -31,15 +31,15 @@
                 <div class="h4"><%= element.user %></div>
               </td>
               <td>
-                <div class="col">
-                  <div class="row h5"><%= element.text %></div>
-                  <div class="row">
+                <div class="">
+                  <div class="h5"><%= element.text %></div>
+                  <div class="">
                     <small
                       >Date: <br />
                       <%= element.added %></small
                     >
                   </div>
-                  <div class="row">
+                  <div class="">
                     <small>MessageID: <br /><%= element.messageId %></small>
                   </div>
                 </div>
