--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,8 @@
 <div class="mt-5 p-4 bg-dark text-white text-center">
   <p>Mini Message Board</p>
-  <i class="fa fa-github" style="font-size: 16px">&nbsp;Built by Arek&nbsp;</i>
+  <a href="https://github.com/areksoulahian"
+    ><i class="fa fa-github" style="font-size: 16px"
+      >&nbsp;Built by Arek&nbsp;</i
+    ></a
+  >
 </div>
