--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,14 +47,15 @@
 
               <td>
                 <div class="d-flex flex-column">
-                  <div class="mb-2">
+                  <div class="mt-4">
                     <a
                       href="<%= basePath %>/edit/<%= element.messageId %>"
                       class="btn btn-warning"
                       >&nbsp;&nbsp;Edit&nbsp;&nbsp;
                     </a>
                   </div>
-                  <div class="">
+                  <div class="my-1"></div>
+                  <div class="mb-4">
                     <form method="POST" action="<%= basePath %>/delete">
                       <input
                         type="hidden"
