set up controllers

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" data-bs-theme="dark">
-  <head>
-    <%- include('./partials/header'); -%>
-    <title><%= title %></title>
-  </head>
-  <body>
-    <%- include('./partials/navbar'); -%>
+
+<head>
+  <%- include('./partials/header'); -%>
+    <title>
+      <%= title %>
+    </title>
+</head>
+
+<body>
+  <%- include('./partials/navbar'); -%>
     <div class="container min-vh-100">
       <div class="p-5 bg-primary text-white text-left rounded">
-        <h1><%=title%></h1>
+        <h1>
+          <%=title%>
+        </h1>
       </div>
       <br />
       <a href="<%= basePath %>/new" class="btn btn-primary">New Message</a>
@@ -20,76 +26,61 @@
               <th scope="">User</th>
               <th scope="">Text</th>
               <th scope=""></th>
-              <!-- <th scope="col">added</th>
-              <th scope="col">messageId</th> -->
             </tr>
           </thead>
           <tbody>
-            <% userPost.forEach((element) => { %>
-            <tr>
-              <td>
-                <div class="h4"><%= element.user %></div>
-              </td>
-              <td>
-                <div class="">
-                  <div class="h5"><%= element.text %></div>
-                  <div class="">
-                    <small
-                      >Date: <br />
-                      <%= element.added %></small
-                    >
+            <% userPost.forEach((element)=> { %>
+              <tr>
+                <td>
+                  <div class="h4">
+                    <%= element.user %>
                   </div>
+                </td>
+                <td>
                   <div class="">
-                    <small>MessageID: <br /><%= element.messageId %></small>
+                    <div class="h5">
+                      <%= element.text %>
+                    </div>
+                    <div class="">
+                      <small>Date: <br />
+                        <%= element.added %>
+                      </small>
+                    </div>
+                    <div class="">
+                      <small>MessageID: <br />
+                        <%= element.messageId %>
+                      </small>
+                    </div>
                   </div>
-                </div>
-              </td>
+                </td>
 
-              <td>
-                <div class="d-flex flex-column">
-                  <div class="mt-4">
-                    <a
-                      href="<%= basePath %>/edit/<%= element.messageId %>"
-                      class="btn btn-warning"
-                      >&nbsp;&nbsp;Edit&nbsp;&nbsp;
-                    </a>
+                <td>
+                  <div class="d-flex flex-column">
+                    <div class="mt-4">
+                      <a href="<%= basePath %>/edit/<%= element.messageId %>"
+                        class="btn btn-warning">&nbsp;&nbsp;Edit&nbsp;&nbsp;
+                      </a>
+                    </div>
+                    <div class="my-1"></div>
+                    <div class="mb-4">
+                      <form method="POST" action="<%= basePath %>/delete">
+                        <input type="hidden" name="user" value="<%= element.user %>" />
+                        <input type="hidden" name="text" value="<%= element.text %>" />
+                        <input type="hidden" name="added" value="<%= element.added %>" />
+                        <input type="hidden" name="messageId" value="<%= element.messageId %>" />
+                        <button class="btn btn-danger" type="submit">
+                          Delete
+                        </button>
+                      </form>
+                    </div>
                   </div>
-                  <div class="my-1"></div>
-                  <div class="mb-4">
-                    <form method="POST" action="<%= basePath %>/delete">
-                      <input
-                        type="hidden"
-                        name="user"
-                        value="<%= element.user %>"
-                      />
-                      <input
-                        type="hidden"
-                        name="text"
-                        value="<%= element.text %>"
-                      />
-                      <input
-                        type="hidden"
-                        name="added"
-                        value="<%= element.added %>"
-                      />
-                      <input
-                        type="hidden"
-                        name="messageId"
-                        value="<%= element.messageId %>"
-                      />
-                      <button class="btn btn-danger" type="submit">
-                        Delete
-                      </button>
-                    </form>
-                  </div>
-                </div>
-              </td>
-            </tr>
-            <% }); %>
+                </td>
+              </tr>
+              <% }); %>
           </tbody>
         </table>
       </div>
     </div>
     <%- include('./partials/footer'); -%>
-  </body>
+</body>
 </html>
