made it restful

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -15,7 +15,7 @@
         <div class="card-body">
           <form
             method="POST"
-            action="<%= basePath %>/edit/<%= userPost.messageId %>"
+            action="<%= basePath %>/edit/<%= userPost.messageId %>?_method=PUT"
           >
             <input
               class="form-control"
