--- a/views/index.ejs
+++ b/views/index.ejs
@@ -63,7 +63,7 @@
                     </div>
                     <div class="my-1"></div>
                     <div class="mb-4">
-                      <form method="POST" action="<%= basePath %>/delete">
+                      <form method="POST" action="<%= basePath %>/delete?_method=DELETE">
                         <input type="hidden" name="user" value="<%= element.user %>" />
                         <input type="hidden" name="text" value="<%= element.text %>" />
                         <input type="hidden" name="added" value="<%= element.added %>" />
