--- a/views/index.ejs
+++ b/views/index.ejs
@@ -62,6 +62,7 @@
                       </a>
                     </div>
                     <div class="my-1"></div>
+                    <!-- DELETE FORM -->
                     <div class="mb-4">
                       <form method="POST" action="<%= basePath %>/delete?_method=DELETE">
                         <input type="hidden" name="user" value="<%= element.user %>" />
@@ -73,6 +74,7 @@
                         </button>
                       </form>
                     </div>
+                    <!-- END DELETE FORM -->
                   </div>
                 </td>
               </tr>
@@ -83,4 +85,5 @@
     </div>
     <%- include('./partials/footer'); -%>
 </body>
+
 </html>
